HTML version only (with no CSS) v.1.1

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <a href="./index.html">WEBSTUDIO</a>
       <nav>
         <ul>
-          <li><a href=""></a>Studio</li>
-          <li><a href=""></a>Portfolio</li>
-          <li><a href=""></a>Contacts</li>
+          <li><a href="./index.html"></a>Studio</li>
+          <li><a href="./index.html"></a>Portfolio</li>
+          <li><a href="./index.html"></a>Contacts</li>
         </ul>
       </nav>
       <address>
