--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       </section>
       <section>
         <ul>
+          <h2>Our advantages</h2>
           <li>
             <h3>Strategy</h3>
             <p>
