--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul>
           <li>
             <img
-              src="images/img.jpg"
+              src="./images/img.jpg"
               alt="Mark Guerrero photo"
               width="264"
               height="260"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="images/img-2.jpg"
+              src="./images/img-2.jpg"
               alt="Tom Ford photo"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="images/img-3.jpg"
+              src="./images/img-3.jpg"
               alt="Camila Garcia photo"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="images/img-4.jpg"
+              src="./images/img-4.jpg"
               alt="Daniel Wilson photo"
               width="264"
               height="260"
